# taskwand

./: .gitignore  HANDOFF.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: task_widget.xml  task_widget_item.xml
android/app/src/main/res/values/: colors_widget.xml
android/app/src/main/res/values-night/: colors_widget.xml
android/app/src/main/res/xml/: network_security_config.xml  (+1 more)
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  notifications.dart  task_widget.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: tasks.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  tasks.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/cargokit/gradle/: plugin.gradle
rust_builder/ios/: rust_lib_taskwand.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_taskwand.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
